QQ-766 -fixed fiscal year date picker being pushed below on mobile devices

--- a/source/styles/_set-fiscal-year.scss
+++ b/source/styles/_set-fiscal-year.scss
@@ -24,3 +24,9 @@
   margin: auto;
   padding-top: 18px;
 }
+
+@media only screen and (max-width: 767px) {
+  .fiscalYearSelect {
+    width: 120px;
+  }
+}
